[package]
edition = "2021"
name = "linqs"
version = "0.1.0"

[dependencies]
diesel = {version = "1.4.4", features = ["postgres", "chrono", "r2d2", "network-address"]}
dotenv = "0.15.0"
ipnetwork = "0.18.0"
nanoid = "0.4.0"
r2d2 = "0.8.9"
rocket = "0.4.10"
serde = {version = "1.0.136", features = ["derive"]}
chrono = "0.4.19"
url = "2.2.2"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "serve"]
