[package]
edition = "2021"
name = "linqs"
version = "0.1.0"

[[bin]]
name = "linqs"
path = "server/main.rs"

[dependencies]
argon2 = "0.3.3"
chrono = "0.4.19"
colored = "2.0.0"
diesel = {version = "1.4.4", features = ["postgres", "chrono", "r2d2", "network-address"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
ipnetwork = "0.18.0"
lazy_static = "1.4.0"
nanoid = "0.4.0"
r2d2 = "0.8.9"
rand_core = {version = "0.6", features = ["std"]}
rocket = "0.4.10"
serde = {version = "1.0.136", features = ["derive"]}
toml = "0.5.8"
url = "2.2.2"
# Needed for Docker
openssl = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "serve"]
version = "0.4.10"
